# rust-cli

./: Cargo.toml
